--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
   <title>Kay's Birthday Party</title>
@@ -18,10 +18,6 @@
 
 </body>
 </html>
->>
-
-
-  <p>For more information: contact Kay at 101-000-0101</p>
 
 </body>
 </html>
